tests/e2e/arg_name_shorthand_error9.error
Error: syntax error in story at line 2, column 34

2|        when client listen path:"/" :"post" as result
                                       ^^^^^^

E0118: Service Event `listen` requires arguments to be named
