tests/e2e/arg_name_shorthand_error9.story
http server as client
    when client listen path:"/" :"post" as result
        result write content: "foobar"
